--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     - primary meta tags
   -->
   <title>Daniel - Website Designer & Developer.</title>
-  <meta name="title" content="Julia - I'm User Interface Designer & Developer.">
+  <meta name="title" content="Daniel - Website Designer & Developer.">
   <meta name="description" content="This is a personal portfolio html template made by codewithsadee">
 
   <!-- 
@@ -48,7 +48,7 @@
     <div class="container">
 
       <a href="#" class="logo">
-        <img src="./assets/images/logo-dark.svg" width="64" height="24" alt="Julia home">
+        <img src="./assets/images/logo-dark.svg" width="64" height="24" alt="Daniel home">
       </a>
 
       <nav class="navbar" data-navbar>
